modify：font size

--- a/src/OhSubtitle/OhSubtitle.csproj
+++ b/src/OhSubtitle/OhSubtitle.csproj
@@ -6,6 +6,13 @@
     <UseWPF>true</UseWPF>
     <PackageIcon>icon.png</PackageIcon>
     <ApplicationIcon>icon.ico</ApplicationIcon>
+    <PackageProjectUrl>https://github.com/Surbowl/Oh-Subtitle</PackageProjectUrl>
+    <RepositoryUrl></RepositoryUrl>
+    <Authors>Surbowl</Authors>
+    <Company />
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageReleaseNotes>https://github.com/Surbowl/Oh-Subtitle</PackageReleaseNotes>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
