应用 dotnet6.0 新特性 <ImplicitUsings> 与 File-scoped namespaces；调整 .cs 文件结构；

--- a/src/OhSubtitle.csproj
+++ b/src/OhSubtitle.csproj
@@ -5,6 +5,7 @@
 		<UseWPF>true</UseWPF>
 		<Nullable>enable</Nullable>
 		<WarningsAsErrors>$(WarningsAsErrors);CS8600;CS8602;CS8603;CS8618;CS8625</WarningsAsErrors>
+		<ImplicitUsings>enable</ImplicitUsings>
 		<PackageIcon>icon.png</PackageIcon>
 		<ApplicationIcon>icon.ico</ApplicationIcon>
 		<PackageProjectUrl>https://github.com/Surbowl/Oh-Subtitle</PackageProjectUrl>
